# Pleco

./: Cargo.toml
pleco/: Cargo.toml
pleco/src/board/: mod.rs
pleco/src/helper/: magic.rs  prelude.rs  psqt.rs
pleco/src/tools/: mod.rs
pleco_engine/: Cargo.toml
pleco_engine/src/: consts.rs  engine.rs
pleco_engine/src/movepick/: mod.rs
pleco_engine/src/tables/: mod.rs  pawn_table.rs
pleco_engine/src/threadpool/: mod.rs
pleco_engine/src/uci/: options.rs
pleco_engine/tests/: test_get_move.rs
