[workspace]
members = [
    "pleco",
    "pleco_engine",
    "pleco_interface",]

default-members = [
    "pleco",
    "pleco_engine",
    "pleco_interface",]

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 3
debug = true
rpath = false
debug-assertions = true
codegen-units = 4
